--- a/global_config.json
+++ b/global_config.json
@@ -212,10 +212,14 @@
         "branch": "develop"
       },
       "redpill_load": {
-        "source_url": "https://github.com/jimmyGALLAND/redpill-load.git",
+        "source_url": "https://github.com/jumkey/redpill-load.git",
         "branch": "develop"
-      }
-    },
+      },
+        "build_env": {
+        "jun_mod": 1,
+        "debug": 0  
+        }
+        },
     {
       "id": "ds3617xs-7.1.0-42661",
       "platform_name": "DS3617xs",
